syntax = "proto3";

package go.micro.srv.v1.account;

service Account {
	rpc NodeIndex(NodeReq) returns (NodeRsp) {}
}

message NodeReq {
	string parentId = 1;
	string guid = 2;
	string type = 3;
}

message LiAttr {
	string guid = 1;
	string type = 2;
}

message NodeRsp {
	bool children = 1;
	string id = 2;
	LiAttr liattr = 3;
	string parent = 4;
	string text = 5;
	string type = 6;
}

